<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.training.demoapp.activities.AgregarRegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBackground"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/fecha"
            style="@style/text_view_style"
            android:hint="@string/fecha"
            android:inputType="datetime" />
        <EditText
            android:id="@+id/euros"
            style="@style/text_view_style"
            android:hint="@string/euros"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/litros"
            style="@style/text_view_style"
            android:hint="@string/litros"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/kmTotales"
            style="@style/text_view_style"
            android:hint="@string/kilometros"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button_save"
            style="@style/button_style"
            android:text="@string/guardar" />

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:datePickerMode="spinner"-->
            <!--android:calendarViewShown="false"/>-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>